@@ -167,7 +167,7 @@ def battle_cry(life):
 		lfe.say(life, _battle_cry_action, action=True)
 
 def get_firearm_accuracy(life):
-	return numbers.clip((10-life['stats']['firearms'])/float(10.0), 0.1, 1)
+	return numbers.clip((life['stats']['firearms'])/10.0, 0.1, 1)
 
 def get_recoil_recovery_rate(life):
 	return numbers.clip(life['stats']['firearms']/10.0, 0.4, 1)
