@@ -10,7 +10,7 @@
 "recoil": 8,
 "firemodes": ["single"],
 "firemode": 0,
-"accuracy": [2, 5],
+"accuracy": 6,
 "material": "metal",
 "thickness": 3,
 "effects": {"rusted": {}}}
