@@ -26,6 +26,7 @@ Fixes:
 	[?] Explosions through wall
 	[ ] Menu entry colors
 	[ ] Dialog topics need to lose their trust/danger score after a while
+	[ ] `get_limb_stability` needs to factor in all injuries
 
 Cycles:
 	[ ] ALife searching for group leader when not found at `last_pos`
