@@ -12,3 +12,4 @@ New in version 0.6:
 	* Explosions now push entities
 	* Added caching layer to zone lookups, dijkstra maps, and reference maps
 	* Inventory/item action menus redesigned for quicker access
+	* New rules for weapon accuracy
